--- a/style.css
+++ b/style.css
@@ -630,7 +630,7 @@ max-width: 600px;
     justify-content: center;
     align-items: center;
     gap: 2rem;
-  
+  padding:2rem;
   }
   .cab-routes{
     display: flex;
