--- a/style.css
+++ b/style.css
@@ -571,20 +571,21 @@ max-width: 600px;
 
 .cab-routes-section {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  padding:2rem;
+  padding: 1rem;
 }
 
 .cab-routes {
   flex: 0 0 calc(33.33% - 20px);
   margin-bottom: 20px;
-  gap: 2rem;
+  gap: 1.8rem;
   display: flex;
 }
 
 .cab-routes-card {
-  width: 350px;
+  width: 20rem;
   padding: 1rem;
   display: flex;
   gap: 1rem;
@@ -620,10 +621,19 @@ max-width: 600px;
     justify-content: center; /* Center items vertically */
   }
 
-.cab-routes.card{
-width:280px;
 
+
+  
 }
+
+@media screen and (max-width: 360px) {
+  .cab-routes {
+    flex: 0 0 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; /* Center items vertically */
+  }
+
 
   
 }
@@ -829,4 +839,3 @@ width:280px;
 
 
 }
-
